# le-jardin-voicebot

./: .gitignore  README.md  config.py  env.example  openai_client.py  pyproject.toml
.github/workflows/: github-actions-demo.yml
agent/: booking_guardrails.py  graph.py  helpers.py  prompts.py  service.py  state.py
src/: config.py
src/agent/: graph.py  service.py  state.py
src/ui/: app.py  routes.py
src/ui/static/: app.js  styles.css
src/voice/: openai_client.py
src/web/: __init__.py  paths.py  routes.py
src/web/static/: index.html
tests/: test_auth.py  test_booking_guardrails.py  test_graph.py  test_helpers.py  test_openai_client.py  test_routes.py
voice/: openai_client.py
web/: app.py  auth.py  routes.py
web/static/: app.js
