[project]
name = "le-jardin-voicebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "langfuse>=4.5.1",
    "langgraph>=1.1.10",
    "openai>=2.33.0",
    "pydantic-settings>=2.14.0",
    "ruff>=0.15.12",
]
