[project]
name = "le-jardin-voicebot"
version = "1.0.0"
description = "A voice-enabled reservation assistant for Le Jardin, built with FastAPI, LangChain, and OpenAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langfuse>=4.5.1",
    "langgraph>=1.1.10",
    "openai>=2.33.0",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.27",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
